# gainsweep

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
docs/: SPEC.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/gainsweep/: domain.py  settings.py
src/gainsweep/alert/: engine.py
src/gainsweep/api/: app.py  deps.py  schemas.py
src/gainsweep/api/routes/: alerts.py
src/gainsweep/protocols/: price_provider.py  scheduler.py  sweep_orchestrator.py  sweep_venue.py
src/gainsweep/providers/: coingecko.py
src/gainsweep/repositories/: alert.py  config.py  snapshot.py  sweep.py
src/gainsweep/sweep/: orchestrator.py
src/gainsweep/tracker/: daily_high.py  position.py
src/gainsweep/venues/: coinbase.py
src/merchant_sweep/: settings.py
src/merchant_sweep/db/: models.py
tests/alert/: test_engine.py
tests/api/: test_alerts.py
tests/providers/: test_coingecko.py
tests/sweep/: test_orchestrator.py
tests/tracker/: test_daily_high.py  test_position.py
tests/venues/: test_coinbase.py
