[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gainsweep"
version = "0.1.0"
description = "Crypto price-alert and sweep service for merchants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.21",
    "mypy>=1.14",
    "ruff>=0.9",
    "psycopg2-binary>=2.9",   # sync driver for Alembic migrations
]

[tool.hatch.build.targets.wheel]
packages = ["src/gainsweep"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
